src/main/java/com/example/demo/paypal/res/error/capture/Link.java
package com.example.demo.paypal.res.error.capture;

import lombok.Data;

@Data
public class Link {
	private String href;
	private String rel;
	private String method;
}
